css/stylesheet.css
html {
    overflow: hidden;
    height: 100%;
    overflow: auto;
}
a {
    color: #707070;
}
a:link {
    text-decoration: none;
}
a:hover {
    /*text-decoration: underline;*/
    color: #6bff83;
    text-shadow: 1px 1px 4px #696969;
}

body {
    padding: 0px;
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
    height: 100%;
    overflow: auto;
}

h2, p {
    font-family: 'Quicksand', sans-serif;
    color: #424242;
}

#title {
    text-decoration: none;
}
#headerbar {
    background-color: #ffffff;
    overflow: auto;
    text-align: center;
    height: 70px;
}

#name {
    display: inline-block; 
    position: absolute; 
    left: 0; 
    right: 0; 
    margin: auto;
    width: 130px;
}

#name > h2 {
    color: #c9c9c9;
    display: inline-block;
}

#navbar {
    float: right;
    margin-right: 10px;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 900;
  }

#intro {
    position: relative;
    text-align: center;
    font-size: 50px;
    height: 100vh;
    padding: 0px;
    background-color: #ffffff;
}

#intro-inner {
    position: relative;
    top: 50%; left: 50%;
    transform: translate(-50%,-50%);
    margin-bottom: 0px;
    overflow: hidden;
    max-height: initial;
    height: 85vh;
}

#intro-inner > p {
    position: relative;
    word-wrap: break-word;
    
}

#intro-words {
    margin-top: 10%;
}

.arrow {
    height: 10%;
    width: 10%;
    margin-top: 3vh;
    padding: 10px;
    font-size: 50px;
}
#about {
    position: relative;
    font-size: 20px;
    height: calc(100vh - 70px);
    background-color: rgb(244, 253, 255);
    text-align: center;
}
#about-words {
    position: absolute;
    text-align: center;
    top: 40%; left: 50%;
    transform: translate(-50%,-50%);
    background-color: #ffffff;
    border-width: 20px;
    border-style: solid;
    border-color: #ffffff;
    border-radius: 5px;
    box-shadow: 3px 3px 5px #6d6c6c;
}

#aboutarrow{
    text-align: center;
    position: relative;
    top: 60vh;  
}

#projects {
    position: relative;
    font-size: 20px;
    height: calc(100vh - 60px);
    background-color: rgb(210, 255, 216);
    text-align: center;
}

#project-title {
    position: absolute;
    left: 46.5vw;
    top: 7vh;
    z-index: 20;
}

#project1 {
    float: left;
    left: 5vh;
    width: 50vw;

}

#project2 {
    float: left;
    right: 5vh;
    width: 50vw;

}

.project-display {
    position: relative;
    margin: 0px auto;
    text-align: center;
    vertical-align: center;
    height: calc(100vh - 70px);
}

.project-display > a {
    padding: 0px;
    margin: 0px auto;
    display: block;
    height: 35vw;
    width: 35vw;
    margin-top: calc((100vh - 35vw - 60px)/2);
}

.project-cover {
    width: 35vw;
    height: 35vw;
    border-radius: 3%;
    box-shadow: 3px 3px 5px #6d6c6c;
}

.project-description-layer {
    word-wrap: break-word;
    position: relative;
    width: 35vw;
    top: calc(-35vw - 5px);
    align-items: center;
    text-align: center;
    visibility: hidden;
}

.project-description {
    width: 35vw;
    height: 35vw;
    background:rgba(170, 170, 170, 0.5);
    text-align: center;
    margin: 0px auto;
    display: table-cell;
    vertical-align: middle;
    font-size: 30px;
    border-radius: 3%;
}

#project1link:hover .project-description-layer {
    visibility: visible;
    opacity: 1;
}

#project2link:hover .project-description-layer {
    visibility: visible;
    opacity: 1;
}

